...

// UITableViewDelegate
- (void)tableView:(UITableView *)tableView didSelectRowAtIndexPath:(NSIndexPath *)indexPath
{
    if (indexPath.section == SRCRecipeInfoSectionIngredients) {
        NSString *text = self.detailItem.ingredients[indexPath.row];
        UIAlertView *alert = [[UIAlertView alloc] initWithTitle:NSLocalizedString(@"Ingredient", nil)
            message:text delegate:nil cancelButtonTitle:NSLocalizedString(@"OK", nil) otherButtonTitles:nil];
        [alert show];
        return;
    }
    
    if (indexPath.section == SRCRecipeInfoSectionLinks) {
        NSURL *url = indexPath.row ? self.detailItem.source_url : self.detailItem.f2f_url;
...
